--- a/package.json
+++ b/package.json
@@ -96,5 +96,10 @@
       "no-eq-null": 2,
       "no-unused-expressions": 0
     }
+  },
+  "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^8.12.1",
+    "reveal.js-appearance": "^1.1.1"
   }
 }
